#add: basic steps of pug

--- a/views/base.pug
+++ b/views/base.pug
@@ -1,1 +1,12 @@
-h1 Hello, world!
+doctype html
+html
+    head
+        title Natours | #{tour}
+        link(rel="stylesheet" href="css/style.css")
+        link(rel="shortcut icon" href="img/favicon.png")
+
+    body
+        h1= user.toLowerCase()
+        - const age = 21;
+        p= age * 1 
+        //- h1 Hello, world!
