--- a/views/base.pug
+++ b/views/base.pug
@@ -1,12 +1,45 @@
 doctype html
-html
+html(lang="en")
     head
-        title Natours | #{tour}
-        link(rel="stylesheet" href="css/style.css")
-        link(rel="shortcut icon" href="img/favicon.png")
-
+    meta(charset="UTF-8")
+    meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(
+      href="https://fonts.googleapis.com/css?family=Lato:300,300i,700"
+      rel="stylesheet"
+    )
+    link(rel="stylesheet" href="css/style.css")
+    link(rel="shortcut icon" type="image/png" href="img/favicon.png")
+    title Natours | Exciting tours for adventurous people
     body
-        h1= user.toLowerCase()
-        - const age = 21;
-        p= age * 1 
-        //- h1 Hello, world!
+        //- HEADER
+        header.header
+            nav.nav.nav--tours
+                .header__logo
+                    img(src="img/logo-white.png" alt="Natours logo")
+            form.nav__search
+                button.nav__search-btn
+                    svg
+                        use(xlink:href="img/icons.svg#icon-search")
+                input.nav__search-input(type="text" placeholder="Search tours")
+            
+            nav.nav.nav--user
+                //- a.nav__el(href="#") My bookings
+                //- a.nav__el(href="#")
+                //-     img.nav__user-img(src="img/users/default.jpg" alt="User photo")
+                //-     span Jonas
+                button.nav__el Log in
+                button.nav__el.nav__el--cta Sign up
+        //- CONTENT
+        main.main
+            h1= tour
+        //- FOOTER
+        footer.footer
+            .footer__logo
+                img(src="img/logo-green.png" alt="Natours logo")
+            ul.footer__nav
+                li: a(href="#") About us
+                li: a(href="#") Download apps
+                li: a(href="#") Become a guide
+                li: a(href="#") Careers
+                li: a(href="#") Contact
+            p.footer__copyright &copy; by Htut Wai Phyoe. All rights reserved.
