--- a/views/base.pug
+++ b/views/base.pug
@@ -12,34 +12,10 @@ html(lang="en")
     title Natours | Exciting tours for adventurous people
     body
         //- HEADER
-        header.header
-            nav.nav.nav--tours
-                .header__logo
-                    img(src="img/logo-white.png" alt="Natours logo")
-            form.nav__search
-                button.nav__search-btn
-                    svg
-                        use(xlink:href="img/icons.svg#icon-search")
-                input.nav__search-input(type="text" placeholder="Search tours")
-            
-            nav.nav.nav--user
-                //- a.nav__el(href="#") My bookings
-                //- a.nav__el(href="#")
-                //-     img.nav__user-img(src="img/users/default.jpg" alt="User photo")
-                //-     span Jonas
-                button.nav__el Log in
-                button.nav__el.nav__el--cta Sign up
+        include _header
         //- CONTENT
         main.main
-            h1= tour
+            block content
         //- FOOTER
-        footer.footer
-            .footer__logo
-                img(src="img/logo-green.png" alt="Natours logo")
-            ul.footer__nav
-                li: a(href="#") About us
-                li: a(href="#") Download apps
-                li: a(href="#") Become a guide
-                li: a(href="#") Careers
-                li: a(href="#") Contact
-            p.footer__copyright &copy; by Htut Wai Phyoe. All rights reserved.
+        include _footer
+        
