--- a/views/base.pug
+++ b/views/base.pug
@@ -9,13 +9,14 @@ html(lang="en")
     )
     link(rel="stylesheet" href="css/style.css")
     link(rel="shortcut icon" type="image/png" href="img/favicon.png")
-    title Natours | Exciting tours for adventurous people
+    title Natours | #{title}
     body
         //- HEADER
         include _header
         //- CONTENT
         main.main
             block content
+                h1 This is base template
         //- FOOTER
         include _footer
         
