--- a/views/_header.pug
+++ b/views/_header.pug
@@ -2,11 +2,11 @@ header.header
     nav.nav.nav--tours
         .header__logo
             a(href="/")
-                img(src="img/logo-white.png" alt="Natours logo")
+                img(src="/img/logo-white.png" alt="Natours logo")
     form.nav__search
         button.nav__search-btn
             svg
-                use(xlink:href="img/icons.svg#icon-search")
+                use(xlink:href="/img/icons.svg#icon-search")
         input.nav__search-input(type="text" placeholder="Search tours")
 
     nav.nav.nav--user
